--- a/src/webapp/WEB-INF/pages/edit.html
+++ b/src/webapp/WEB-INF/pages/edit.html
@@ -10,6 +10,12 @@
   <label for="name">Enter name: </label>
   <input type="text" th:field="*{name}" id="name"/>
   <br/>
+  <label for="lastname">Enter lastname: </label>
+  <input type="text" th:field="*{lastName}" id="lastname"/>
+  <br/>
+  <label for="age">Enter age: </label>
+  <input type="text" th:field="*{age}" id="age"/>
+  <br/>
   <input type="submit" value="Update!"/>
 </form>
 
